# launcher

./: .gitignore  CMakeLists.txt  Launcher.pro  fileupdater.cpp  fileupdater.h  fileversion.cpp  fileversion.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  types.h  yandexworker.cpp  yandexworker.h
rc/: app_icon.rc
